Python News
+++++++++++

What's New in Python 2.7.7?
===========================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #19081: When a zipimport .zip file in sys.path being imported from
  is modified during the lifetime of the Python process after zipimport has
  already cached the zip's table of contents we detect this and recover
  rather than read bad data from the .zip (causing odd import errors).

- Raise a better error when non-unicode codecs are used for a file's coding
  cookie.

- Issue #17976: Fixed potential problem with file.write() not detecting IO error
  by inspecting the return value of fwrite().  Based on patches by Jaakko Moisio
  and Victor Stinner.

- Issue #14432: Generator now clears the borrowed reference to the thread
  state. Fix a crash when a generator is created in a C thread that is
  destroyed while the generator is still used. The issue was that a generator
  contains a frame, and the frame kept a reference to the Python state of the
  destroyed C thread. The crash occurs when a trace function is setup.

- Issue #19932: Fix typo in import.h, missing whitespaces in function prototypes.

- Issue #19638: Fix possible crash / undefined behaviour from huge (more than 2
  billion characters) input strings in _Py_dg_strtod.

Library
-------

- Issue #20262: Warnings are raised now when duplicate names are added in the
  ZIP file or too long ZIP file comment is truncated.

- Issue #20270: urllib and urlparse now support empty ports.

- Issue #20243: TarFile no longer raise ReadError when opened in write mode.

- Issue #20245: The open functions in the tarfile module now correctly handle
  empty mode.

- Issue #20086: Restored the use of locale-independent mapping instead of
  locale-dependent str.lower() in locale.normalize().

- Issue #20246: Fix buffer overflow in socket.recvfrom_into.

- Issue #19082: Working SimpleXMLRPCServer and xmlrpclib examples, both in
  modules and documentation.
